--- a/MJor/assets/css/jquery.ui.all.css
+++ b/MJor/assets/css/jquery.ui.all.css
@@ -13,3 +13,4 @@
 @import "jquery.ui.progressbar.css";
 @import "jquery.ui.datepicker.css";
 @import "jquery.ui.tabs.css";
+@import "jquery.ui.autocomplete.css";/*JLB*/
